Ajout de categories et du style quand on passe la souris sur une image

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -54,47 +54,84 @@
 </table>
 
 <h2>Suggestions</h2>
-  <table class="tg centered_table" id="tableHomePage">
-    <thead>
-      <tr>
-        <th class="box">
-          <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-        </th>
-        <th class="box">
-          <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-        </th>
-        <th class="box">
-          <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-        </th>
-        <th class="box">
-          <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-        </th>
-        <th class="box">
-          <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td class="box">
-          <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-        </td>
-        <td class="tg-0lax"></td>
-        <td class="tg-0lax"></td>
-        <td class="tg-0lax"></td>
-        <td class="tg-0lax"></td>
-      </tr>
-      <tr>
-        <td class="tg-0lax"></td>
-        <td class="tg-0lax">hey</td>
-        <td class="tg-0lax"></td>
-        <td class="tg-0lax"></td>
-        <td class="tg-0lax">test</td>
-      </tr>
-    </tbody>
-  </table>
+<table>
+  <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+  <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+  <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+  <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+  <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+</table>
+
+<table class="centered_table" id="tableHomePage">
+    <tr>
+      <td class="box">
+        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+      </td>
+      <td class="box">
+          <div class="mouse_hover_image">
+            <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+            <div class="text_on_image">NOM MANGA</div>
+            <table class="stars">
+              <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+              <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+              <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+              <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+              <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            </table>
+            
+          </div>
+      </td>
+      <td class="box">
+        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+      </td>
+      <td class="box">
+        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+      </td>
+      <td class="box">
+        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+      </td>
+    </tr>
+    <tr>
+      <td class="box">
+        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+      </td>
+      <td class="box">
+        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+      </td>
+      <td class="box">
+        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+      </td>
+      <td class="box">
+        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+      </td>
+      <td class="box">
+        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+      </td>
+    </tr>
+    <tr>
+      <td class="box">
+        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+      </td>
+      <td class="box">
+        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+      </td>
+      <td class="box">
+        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+      </td>
+      <td class="box">
+        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+      </td>
+      <td class="box">
+        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+      </td>
+    </tr>
+</table>
 
 
+
+
+<br><br>
 </body>
+
 
 </html>
