Yessay le systemes d'étoiles est fait

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -54,13 +54,7 @@
 </table>
 
 <h2>Suggestions</h2>
-<table>
-  <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
-  <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
-  <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
-  <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
-  <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
-</table>
+
 
 <table class="centered_table" id="tableHomePage">
     <tr>
@@ -69,7 +63,7 @@
       </td>
       <td class="box">
           <div class="mouse_hover_image">
-            <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+            <img class="manga_cover" src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
             <div class="text_on_image">NOM MANGA</div>
             <table class="stars">
               <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
