--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,6 +22,15 @@
   <title>Scans Reader Homepage</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="16x16" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKRTzM01UrruPkwsMJQP66NNDtkJ_A_fdCLQ&usqp=CAU">
+  <style>
+    /* On le mets ici uniquement pour les éléments de la hotbar qui changent chaque page*/
+    .house_homepage {
+      box-shadow: 0 0 7px 7px lightblue inset;
+      -moz-box-shadow: 7px 7px 5px blue;
+      -webkit-box-shadow: 0px 0px 30px blue;
+      -khtml-box-shadow: 7px 7px 5px blue;
+    }
+  </style>
 </head>
 <body>
 
@@ -61,7 +70,7 @@
       <td class="box">
         <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
       </td>
-      <td class="box">
+      <td class="box"> <a href="manga_description.html">
           <div class="mouse_hover_image">
             <img class="manga_cover" src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
             <div class="text_on_image">NOM MANGA</div>
@@ -72,9 +81,8 @@
               <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
               <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
             </table>
-            
           </div>
-      </td>
+      </a></td>
       <td class="box">
         <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
       </td>
