--- a/src/main/webapp/manga_description.html
+++ b/src/main/webapp/manga_description.html
@@ -23,10 +23,6 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="16x16" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKRTzM01UrruPkwsMJQP66NNDtkJ_A_fdCLQ&usqp=CAU">
   <style>
-    /* On le mets ici uniquement pour les éléments de la hotbar qui changent chaque page*/
-    #categories {
-      text-shadow: 1px 1px 2px black, 0 0 1em blue, 0 0 0.2em blue;
-    }
   </style>
 </head>
 <body>
@@ -61,81 +57,63 @@
 
 <br> <br><br> <br>
 
-<table class="centered_table">
-  <tbody>
-    <tr>
-      <th>
-        Bouton 1
-      </th>
-      <th>
-        Bouton 2
-      </th>
-      <th>
-        Bouton 3
-      </th>
-      <th>
-        Bouton 4
-      </th>
-    </tr>
-    <tr>
-      <th>
-        Bouton 5
-      </th>
-      <th>
-        Bouton 6
-      </th>
-      <th>
-        Bouton 7
-      </th>
-      <th>
-        Bouton 8
-      </th>
-    </tr>
-  </tbody>
-</table>
-
-<br> <br>
-
-<table class="tg centered_table" id="tableHomePage">
+<table class="centered_table" id="tableau_description">
   <thead>
-    <tr>
-      <th class="box">
-        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-      </th>
-      <th class="box">
-        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-      </th>
-      <th class="box">
-        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-      </th>
-      <th class="box">
-        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-      </th>
-      <th class="box">
-        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-      </th>
-    </tr>
+      <tr>
+          <th colspan="2">
+            <h1>
+              Titre de l'oeuvre
+            </h1>
+          </th>
+      </tr>
   </thead>
   <tbody>
+      <tr>
+          <td style="text-align: center;">
+            <img id="manga_cover_description" src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+          </td>
+          <td id="texte_description_manga">
+            <h3>
+              Résumé
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit. 
+            </p>
+            <h4>
+              Catégories :
+            </h4>
+            <h4>
+              Note : 
+            </h4>
+            <h4>
+              Auteur :
+            </h4>
+          </td>
+      </tr>
+  </tbody>
+</table>
+
+<br> <br> <br>
+
+
+<table class="centered_table" id="tableau_chapitres">
+  <tbody>
     <tr>
-      <td class="box">
-        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-      </td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0lax"></td>
+      <td>Chapitre 1</td>
     </tr>
     <tr>
-      <td class="tg-0lax"></td>
-      <td class="tg-0lax">hey</td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0lax">test</td>
+      <td>Chapitre 2</td>
+    </tr>
+    <tr>
+      <td>Chapitre 3</td>
+    </tr>
+    <tr>
+      <td>Chapitre 4</td>
     </tr>
   </tbody>
 </table>
 
+<br> <br> <br> <br>
 
 </body>
 
