Fin de travail Jeudi
Ajout d'un lecteur pdf
Ajout des etoiles noires
Ajout d'un script js
Debut d'une JSP
Amélioration de pleins d'autres ptits trucs

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,6 +31,9 @@
       -khtml-box-shadow: 7px 7px 5px blue;
     }
   </style>
+
+  <script src="script.js"></script>
+
 </head>
 <body>
 
@@ -67,9 +70,86 @@
 
 <table class="centered_table" id="tableHomePage">
     <tr>
-      <td class="box">
-        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-      </td>
+      <td class="box"> <a href="manga_description.html">
+        <div class="mouse_hover_image">
+          <img class="manga_cover" src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+          <div class="text_on_image">NOM MANGA</div>
+          <table class="stars">
+            <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img src="https://upload.wikimedia.org/wikipedia/commons/c/c9/Black_star.png"></td>
+            <td><img src="https://upload.wikimedia.org/wikipedia/commons/c/c9/Black_star.png"></td>
+          </table>
+        </div>
+      </a></td>
+      <td class="box"> <a href="manga_description.html">
+        <div class="mouse_hover_image">
+          <img class="manga_cover" src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+          <div class="text_on_image">NOM MANGA</div>
+          <table class="stars">
+            <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+          </table>
+        </div>
+      </a></td>
+      <td class="box"> <a href="manga_description.html">
+        <div class="mouse_hover_image">
+          <img class="manga_cover" src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+          <div class="text_on_image">NOM MANGA</div>
+          <table class="stars">
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/c/c9/Black_star.png"></td>
+          </table>
+        </div>
+      </a></td>
+      <td class="box"> <a href="manga_description.html">
+        <div class="mouse_hover_image">
+          <img class="manga_cover" src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+          <div class="text_on_image">NOM MANGA</div>
+          <table class="stars">
+            <td><img src="https://upload.wikimedia.org/wikipedia/commons/c/c9/Black_star.png"></td>
+            <td><img src="https://upload.wikimedia.org/wikipedia/commons/c/c9/Black_star.png"></td>
+            <td><img src="https://upload.wikimedia.org/wikipedia/commons/c/c9/Black_star.png"></td>
+            <td><img src="https://upload.wikimedia.org/wikipedia/commons/c/c9/Black_star.png"></td>
+            <td><img src="https://upload.wikimedia.org/wikipedia/commons/c/c9/Black_star.png"></td>
+          </table>
+        </div>
+      </a></td>
+      <td class="box"> <a href="manga_description.html">
+        <div class="mouse_hover_image">
+          <img class="manga_cover" src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+          <div class="text_on_image">NOM MANGA</div>
+          <table class="stars">
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+          </table>
+        </div>
+      </a></td>
+    </tr>
+    <tr>
+      <td class="box"> <a href="manga_description.html">
+        <div class="mouse_hover_image">
+          <img class="manga_cover" src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+          <div class="text_on_image">NOM MANGA</div>
+          <table class="stars">
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+          </table>
+        </div>
+      </a></td>
       <td class="box"> <a href="manga_description.html">
           <div class="mouse_hover_image">
             <img class="manga_cover" src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
@@ -83,49 +163,112 @@
             </table>
           </div>
       </a></td>
-      <td class="box">
-        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-      </td>
-      <td class="box">
-        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-      </td>
-      <td class="box">
-        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-      </td>
+      <td class="box"> <a href="manga_description.html">
+        <div class="mouse_hover_image">
+          <img class="manga_cover" src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+          <div class="text_on_image">NOM MANGA</div>
+          <table class="stars">
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+          </table>
+        </div>
+      </a></td>
+      <td class="box"> <a href="manga_description.html">
+        <div class="mouse_hover_image">
+          <img class="manga_cover" src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+          <div class="text_on_image">NOM MANGA</div>
+          <table class="stars">
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+          </table>
+        </div>
+      </a></td>
+      <td class="box"> <a href="manga_description.html">
+        <div class="mouse_hover_image">
+          <img class="manga_cover" src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+          <div class="text_on_image">NOM MANGA</div>
+          <table class="stars">
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+          </table>
+        </div>
+      </a></td>
     </tr>
     <tr>
-      <td class="box">
-        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-      </td>
-      <td class="box">
-        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-      </td>
-      <td class="box">
-        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-      </td>
-      <td class="box">
-        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-      </td>
-      <td class="box">
-        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-      </td>
-    </tr>
-    <tr>
-      <td class="box">
-        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-      </td>
-      <td class="box">
-        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-      </td>
-      <td class="box">
-        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-      </td>
-      <td class="box">
-        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-      </td>
-      <td class="box">
-        <img src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
-      </td>
+      <td class="box"> <a href="manga_description.html">
+        <div class="mouse_hover_image">
+          <img class="manga_cover" src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+          <div class="text_on_image">NOM MANGA</div>
+          <table class="stars">
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+          </table>
+        </div>
+      </a></td>
+      <td class="box"> <a href="manga_description.html">
+          <div class="mouse_hover_image">
+            <img class="manga_cover" src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+            <div class="text_on_image">NOM MANGA</div>
+            <table class="stars">
+              <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+              <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+              <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+              <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+              <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            </table>
+          </div>
+      </a></td>
+      <td class="box"> <a href="manga_description.html">
+        <div class="mouse_hover_image">
+          <img class="manga_cover" src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+          <div class="text_on_image">NOM MANGA</div>
+          <table class="stars">
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+          </table>
+        </div>
+      </a></td>
+      <td class="box"> <a href="manga_description.html">
+        <div class="mouse_hover_image">
+          <img class="manga_cover" src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+          <div class="text_on_image">NOM MANGA</div>
+          <table class="stars">
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+          </table>
+        </div>
+      </a></td>
+      <td class="box"> <a href="manga_description.html">
+        <div class="mouse_hover_image">
+          <img class="manga_cover" src="http://images1.fanpop.com/images/photos/2500000/Death-note-manga-covers-death-note-2531412-691-1024.jpg">
+          <div class="text_on_image">NOM MANGA</div>
+          <table class="stars">
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+            <td><img class="test_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/640px-Golden_star.svg.png"></td>
+          </table>
+        </div>
+      </a></td>
     </tr>
 </table>
 
