--- a/src/main/webapp/manga_description.html
+++ b/src/main/webapp/manga_description.html
@@ -99,19 +99,23 @@
 <table class="centered_table" id="tableau_chapitres">
   <tbody>
     <tr>
-      <td>Chapitre 1</td>
-    </tr>
-    <tr>
-      <td>Chapitre 2</td>
-    </tr>
-    <tr>
-      <td>Chapitre 3</td>
-    </tr>
-    <tr>
-      <td>Chapitre 4</td>
+      <td>
+        <ul>
+          <li>Chapitre 1</li>
+          <li>Chapitre 2</li>
+          <li>Chapitre 3</li>
+          <li>Chapitre 4</li>
+          <li>Chapitre 5</li>
+        </ul>
+      </td>
     </tr>
   </tbody>
 </table>
+
+<br> <br> 
+
+<embed id="lecteur_pdf" src="https://drive.google.com/uc?export=download&id=1eP9euoFfNPDHUwo56j4FACST0jq6TFn0#toolbar=0" type="application/pdf">
+
 
 <br> <br> <br> <br>
 
