Amélioration du style login

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -47,8 +47,8 @@
 
 <div id="form_login">
   <form action="Servlet" method="get">
-    <input type="text" name="username" id="username" placeholder="Username"> <br> <br>
-    <input type="password" name="password" id="password" placeholder="Password"> <br> <br>
+    Username : <input type="text" name="username" id="username" placeholder="Username"> <br> <br>
+    Password : <input type="password" name="password" id="password" placeholder="Password"> <br> <br>
 
     <button type="submit" value="login" name="op">Login</button>
     <button type="submit" value="register" name="op">Register</button>
