--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -1,37 +1,12 @@
-<!--
-    JBoss, Home of Professional Open Source
-    Copyright 2015, Red Hat, Inc. and/or its affiliates, and individual
-    contributors by the @authors tag. See the copyright.txt in the
-    distribution for a full listing of individual contributors.
-
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
-    http://www.apache.org/licenses/LICENSE-2.0
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
--->
-<!-- Plain HTML page that kicks us into the app -->
 
 <html>
 <head>
-<!--  <meta http-equiv="Refresh" content="0; URL=HelloWorld">   --> 
+<!--  <meta http-equiv="Refresh" content="0; URL=HelloWorld">   -->
+  <meta charset="UTF-8">
   <title>Scans Reader Homepage</title>
   <link rel="stylesheet" href="Styles/Main_style.css">
   <link rel="stylesheet" href="Styles/login.css">
   <link rel="icon" type="image/png" sizes="16x16" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKRTzM01UrruPkwsMJQP66NNDtkJ_A_fdCLQ&usqp=CAU">
-  <style>
-    /* On le mets ici uniquement pour les éléments de la hotbar qui changent chaque page*/
-    .house_homepage {
-      box-shadow: 0 0 7px 7px lightblue inset;
-      -moz-box-shadow: 7px 7px 5px blue;
-      -webkit-box-shadow: 0px 0px 30px blue;
-      -khtml-box-shadow: 7px 7px 5px blue;
-    }
-  </style>
 
   <script src="script.js"></script>
 
@@ -46,7 +21,7 @@
 <br> <br> <br>
 
 <div id="form_login">
-  <form action="Servlet" method="get">
+  <form action="Servlet" method="post">
     Username : <input type="text" name="username" id="username" placeholder="Username"> <br> <br>
     Password : <input type="password" name="password" id="password" placeholder="Password"> <br> <br>
 
