css marche correctement
j'ai juste changé le nom du fichier css associé au login, parce qu'il s'actualisait pas :/

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Scans Reader Homepage</title>
   <link rel="stylesheet" href="Styles/Main_style.css">
-  <link rel="stylesheet" href="Styles/login.css">
+  <link rel="stylesheet" href="Styles/loginn.css">
   <link rel="icon" type="image/png" sizes="16x16" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKRTzM01UrruPkwsMJQP66NNDtkJ_A_fdCLQ&usqp=CAU">
 
   <script src="script.js"></script>
